Code cleanup, documentation, Readme

--- a/family2family/src/main/resources/templates/index.html
+++ b/family2family/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
             <a class="navbar-brand" href="#">Family 2 Family</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <form class="navbar-form navbar-right" action="/login" method="GET">
+            <form class="navbar-form navbar-right" action="/login" method="get">
                 <input class="btn btn-danger center-block" type="submit" value="Login" />
             </form>
             <form class="navbar-form navbar-right" action="/logout" method="post">
