--- a/family2family/src/main/resources/templates/main.html
+++ b/family2family/src/main/resources/templates/main.html
@@ -18,8 +18,8 @@
     <div id="appContent"></div>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.min.js" th:src="@{webjars/react/15.3.2/react.min.js}"></script>
-<script src="https://fb.me/react-dom-15.0.1.js" th:src="@{webjars/react-dom/15.0.1/dist/react-dom.min.js}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js" th:src="@{webjars/react/15.3.2/react.js}"></script>
+<script src="https://fb.me/react-dom-15.0.1.js" th:src="@{webjars/react-dom/15.0.1/dist/react-dom.js}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.25/browser.js" th:src="@{webjars/babel-core/5.8.25/browser.min.js}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" th:src="@{webjars/jquery/3.1.1/jquery.min.js}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.js" th:src="@{webjars/toastr/2.1.3/toastr.min.js}"></script>
