Check User Role completed. main.jsx, and main.html is now split into "internal-main", "external-main", and "request-auth"

--- a/family2family/src/main/resources/templates/internal-main.html
+++ b/family2family/src/main/resources/templates/internal-main.html
@@ -27,7 +27,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" th:href="@{webjars/toastr/2.1.3/toastr.min.css}"/>
 
 <script type="text/babel" src="../static/js/header.jsx" th:src="@{/js/header.jsx}"></script>
-<script type="text/babel" src="../static/js/main.jsx" th:src="@{/js/main.jsx}"></script>
+<script type="text/babel" src="../static/js/internal-main.jsx" th:src="@{/js/internal-main.jsx}"></script>
 
 </body>
 
