--- a/family2family/src/main/resources/static/css/f2f-main.css
+++ b/family2family/src/main/resources/static/css/f2f-main.css
@@ -1,1 +1,34 @@
 /* The css file for the main application */
+
+
+#logo-pic {
+    float: left;
+}
+
+#site-title {
+    float: left;
+    font-family:'sans-serif';
+    padding-left: 1em;
+}
+
+.navbar-brand {
+    font-size: 2em !important;
+}
+
+.navbar-nav li {
+    border-radius: 5%;
+    background-color: #337ab7 !important;
+    margin: 5px;
+}
+
+.navbar-nav li:hover {
+    background-color: #74a9d8 !important;
+}
+
+.navbar-nav li a{
+    color: #ffffff !important;
+}
+
+.navbar-nav li a:hover {
+    background-color: #74a9d8 !important;
+}
