footer frame added

--- a/family2family/src/main/resources/static/css/f2f-internal-main.css
+++ b/family2family/src/main/resources/static/css/f2f-internal-main.css
@@ -26,3 +26,9 @@
     border-radius: 5px !important;
     background-color: #23527c !important;
 }
+
+#footer {
+    background-color: #337ab7;
+    color: white;
+    height: 200px;
+}
