--- a/family2family/src/main/resources/templates/internal-main.html
+++ b/family2family/src/main/resources/templates/internal-main.html
@@ -16,6 +16,7 @@
 <div class="container" role="main">
     <div class="page-header" id="mainHeader"></div>
     <div id="appContent"></div>
+    <div class="page-footer" id="mainFooter"></div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js" th:src="@{webjars/react/15.3.2/react.js}"></script>
@@ -27,6 +28,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" th:href="@{webjars/toastr/2.1.3/toastr.min.css}"/>
 
 <script type="text/babel" src="../static/js/header.jsx" th:src="@{/js/header.jsx}"></script>
+<script type="text/babel" src="../static/js/footer.jsx" th:src="@{/js/footer.jsx}"></script>
 <script type="text/babel" src="../static/js/internal-main.jsx" th:src="@{/js/internal-main.jsx}"></script>
 
 </body>
