Created form to submit request to find a match by accepting userid as input

--- a/family2family/src/main/resources/templates/match-maker.html
+++ b/family2family/src/main/resources/templates/match-maker.html
@@ -7,7 +7,7 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css"
           th:href="@{webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet"
-          href="../static/css/f2f-match-maker.css.css"
+          href="../static/css/f2f-match-maker.css"
           th:href="@{/css/f2f-match-maker.css}"/>
 </head>
 
