--- a/family2family/src/main/resources/templates/external-main.html
+++ b/family2family/src/main/resources/templates/external-main.html
@@ -25,6 +25,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.js" th:src="@{webjars/toastr/2.1.3/toastr.min.js}"></script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" th:href="@{webjars/toastr/2.1.3/toastr.min.css}"/>
+<lint rel="stylesheet" href="../static/css/font-awesome.css" th:href="@{/css/font-awesome.css}"/>
 
 <script type="text/babel" src="../static/js/header.jsx" th:src="@{/js/header.jsx}"></script>
 <script type="text/babel" src="../static/js/internal-main.jsx" th:src="@{/js/external-main.jsx}"></script>
