--- a/family2family/src/main/resources/static/css/f2f-internal-main.css
+++ b/family2family/src/main/resources/static/css/f2f-internal-main.css
@@ -30,5 +30,17 @@
 #footer {
     background-color: #337ab7;
     color: white;
-    height: 200px;
+    padding: 1em;
+    margin: 1em;
+}
+
+#footer ul li {
+    display: inline;
+    list-style: none;
+    margin: 2em;
+}
+
+#footer ul li a {
+    color: white;
+    text-decoration: underline;
 }
