Designed the contact information for My Contact Information.

--- a/family2family/src/main/resources/static/css/f2f-main.css
+++ b/family2family/src/main/resources/static/css/f2f-main.css
@@ -18,6 +18,15 @@
     margin-right: 5%;
 }
 
+.rightInformation {
+    background-color: white;
+    height: 100%;
+}
+
+.leftInformation {
+    background-color: white;
+    height: 100%;
+}
 .rowOne {
     width: 100%;
 }
