--- a/family2family/src/main/resources/static/css/f2f-main.css
+++ b/family2family/src/main/resources/static/css/f2f-main.css
@@ -6,18 +6,16 @@
 }
 
 .component-box {
-    width: 45%;
     border: 1px solid black;
     border-left: 3em solid black !important;
-    float: left;
-    height: 15em;
-    margin: 2em;
-    padding: 2em;
+    height: 100%;
+    margin:5px;
 }
 
 .component-box-title{
-    font-size: 2em;
+    font-size: 1.5em;
     text-align: center;
+    margin-bottom: .5em;
 }
 
 .contact-information-box, .note-box {
@@ -25,6 +23,8 @@
 }
 
 .notes-textarea {
-    width: 100%;
-    height: 100%;
+    width: 98%;
+    height: 105px;
+    resize: none;
+    margin-left: 5px;
 }
