default hide edit user form

--- a/family2family/src/main/resources/static/css/f2f-admin.css
+++ b/family2family/src/main/resources/static/css/f2f-admin.css
@@ -29,3 +29,13 @@
 .refTablesFrame{
     display: none;
 }
+
+.edit-collapse {
+    display: none;
+    clear: both;
+    width: 100%;
+}
+
+.row {
+    clear:left;
+}
