--- a/family2family/src/main/resources/templates/internal-main.html
+++ b/family2family/src/main/resources/templates/internal-main.html
@@ -15,7 +15,8 @@
 
 <div class="container" role="main">
     <div class="page-header" id="mainHeader"></div>
-    <div id="appContent"></div>
+    <div id="navBar"></div>
+    <div class="alertContent" id="appContent"></div>
     <div class="page-footer" id="mainFooter"></div>
 </div>
 
