Corection was made to the header change for the admin page. Replaced the .text with .html and now Admin Header displays correct message. Same was done for the external main.

--- a/family2family/src/main/resources/templates/external-main.html
+++ b/family2family/src/main/resources/templates/external-main.html
@@ -32,7 +32,7 @@
 <!-- this script is to change the page-title class on External main page -->
 <script>
     $(document).ready(function(){
-        $("#site-title #page-title a").text("Mentor/Mentee Information Form");
+        $("#site-title #page-title a").html("Mentor/Mentee Information Form");
     });
 </script>
 </body>
