--- a/family2family/src/main/resources/templates/internal-main.html
+++ b/family2family/src/main/resources/templates/internal-main.html
@@ -35,7 +35,7 @@
 <!-- this script is to change the page-title class on Internal main page -->
 <script>
     $(document).ready(function(){
-        $("#site-title #page-title a").text("Administrator Homepage");
+        $("#site-title #page-title a").html("Administrator Homepage");
     });
 </script>
 </body>
