consolidated CSS files and created nav bar component so we can just add the component to the pages instead of needing to create a nav bar for each page.

--- a/family2family/src/main/resources/templates/external-main.html
+++ b/family2family/src/main/resources/templates/external-main.html
@@ -7,8 +7,8 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css"
           th:href="@{webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet"
-          href="../static/css/f2f-external-main.css"
-          th:href="@{/css/f2f-external-main.css}"/>
+          href="../static/css/f2f-main.css"
+          th:href="@{/css/f2f-main.css}"/>
 </head>
 
 <body>
