--- a/family2family/src/main/resources/templates/internal-main.html
+++ b/family2family/src/main/resources/templates/internal-main.html
@@ -7,8 +7,8 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css"
           th:href="@{webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet"
-          href="../static/css/f2f-internal-main.css"
-          th:href="@{/css/f2f-internal-main.css}"/>
+          href="../static/css/f2f-main.css"
+          th:href="@{/css/f2f-main.css}"/>
 </head>
 
 <body>
@@ -29,6 +29,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" th:href="@{webjars/toastr/2.1.3/toastr.min.css}"/>
 
 <script type="text/babel" src="../static/js/header.jsx" th:src="@{/js/header.jsx}"></script>
+<script type="text/babel" src="../static/js/nav-bar.jsx" th:src="@{/js/nav-bar.jsx}"></script>
 <script type="text/babel" src="../static/js/footer.jsx" th:src="@{/js/footer.jsx}"></script>
 <script type="text/babel" src="../static/js/internal-main.jsx" th:src="@{/js/internal-main.jsx}"></script>
 
