--- a/family2family/src/main/resources/static/css/f2f-main.css
+++ b/family2family/src/main/resources/static/css/f2f-main.css
@@ -1,5 +1,78 @@
 /* The css file for the main application */
 
+
+#logo-pic {
+    float: left;
+}
+
+#site-title {
+    float: left;
+    font-family:'sans-serif';
+    padding-left: 1em;
+}
+body{
+    background-color: #23527c;
+}
+#navBar{
+    background-color: #ffffff;
+    margin-top: 0px;
+    width: 100%;
+}
+#mainHeader{
+    background-color: white;
+    margin-bottom: 0px;
+    width: 100%;
+}
+.navbar-brand {
+    font-size: 2em !important;
+}
+
+.navbar-nav li a {
+    border-radius: 5px !important;
+    background-color: #23527c !important;
+    color: #ffffff !important;
+    margin: 5px;
+
+}
+
+.navbar-nav li a:hover {
+    border-radius: 5px !important;
+    background-color: #23527c !important;
+}
+
+.alertContent{
+    border-radius: 5px !important;
+    background-color: #ffffff !important;
+    color: #23527c !important;
+    margin: 5px;
+    width: 60%;
+    margin-left: 20%;
+    padding: 5px;
+}
+
+#footer {
+    background-color: #cccccc;
+    color: #23527c;
+    padding: 1em;
+    margin: 1em;
+    width: 100%;
+}
+
+#footer ul li {
+    display: inline;
+    list-style: none;
+    margin: 2em;
+}
+
+#footer ul li a {
+    color: #23527c;
+    text-decoration: underline;
+}
+
+.container{
+    width: 100%;
+}
+
 .row-one {
     width: 100%;
     overflow: auto;
@@ -20,6 +93,7 @@
 
 .contact-information-box, .note-box {
     background-color: white;
+    height: 100%;
 }
 
 .notes-textarea {
