made the main background grey and only the internal main page background blue after looking at the design and finding my mistaken assumption.

--- a/family2family/src/main/resources/static/css/f2f-main.css
+++ b/family2family/src/main/resources/static/css/f2f-main.css
@@ -11,7 +11,7 @@
     padding-left: 1em;
 }
 body{
-    background-color: #23527c;
+    background-color: #cccccc;
 }
 #navBar{
     background-color: #ffffff;
