--- a/family2family/src/main/resources/templates/internal-main.html
+++ b/family2family/src/main/resources/templates/internal-main.html
@@ -3,12 +3,9 @@
 
 <head>
     <title>F2F</title>
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css"
-          th:href="@{webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
-    <link rel="stylesheet"
-          href="../static/css/f2f-main.css"
-          th:href="@{/css/f2f-main.css}"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" th:href="@{webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="../static/css/f2f-main.css" th:href="@{/css/f2f-main.css}"/>
+    <link rel="stylesheet" href="../static/css/f2f-internal-main.css" th:href="@{/css/f2f-internal-main.css}"/>
 </head>
 
 <body>
