--- a/family2family/src/main/resources/static/css/f2f-admin.css
+++ b/family2family/src/main/resources/static/css/f2f-admin.css
@@ -1,32 +1,33 @@
+/* CSS for the Admin page*/
+
 .button-group button {
     margin: 4px;
 }
-.button-group .delete{
+
+.button-group .delete {
     margin: 4px 90px 4px 70px;
 }
 
-.editUserRow {
+.edit-user-row {
     margin: 30px 0 0 0;
 }
 
-.tableheader
-{
+.table-header {
     background-color: black;
     color: white;
     font-size: 15px;
     width: 100%;
 }
 
-.container .table
-{
+.container .table {
     border: 1px solid black;
 }
 
-.usersFrame{
+.users-frame {
     display: block;
 }
 
-.refTablesFrame{
+.ref-tables-frame {
     display: none;
 }
 
@@ -37,5 +38,5 @@
 }
 
 .row {
-    clear:left;
+    clear: left;
 }
