--- a/family2family/src/main/resources/templates/admin.html
+++ b/family2family/src/main/resources/templates/admin.html
@@ -18,6 +18,7 @@
 
 <div class="container" role="main">
     <div class="page-header" id="mainHeader"></div>
+    <div id="navBar"></div>
     <div id="appContent"></div>
 </div>
 
@@ -31,6 +32,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" th:href="@{webjars/toastr/2.1.3/toastr.min.css}"/>
 
 <script type="text/babel" src="../static/js/header.jsx" th:src="@{/js/header.jsx}"></script>
+<script type="text/babel" src="../static/js/nav-bar.jsx" th:src="@{/js/nav-bar.jsx}"></script>
 <script type="text/babel" src="../static/js/admin.jsx" th:src="@{/js/admin.jsx}"></script>
 
 </body>
