Hooking webpack into the gradle build

--- a/family2family/src/main/resources/templates/test.html
+++ b/family2family/src/main/resources/templates/test.html
@@ -10,7 +10,7 @@
 <div id="app">
 </div>
 
-<script type="text/javascript" src="../static/build/bundle.js" th:src="@{/build/bundle.js}"></script>
+<script type="text/javascript" src="../static/build/test/test-bundle.js" th:src="@{/build/test/test-bundle.js}"></script>
 
 </body>
 
