I have added Font-Awesome to the project for the Icons that were I have used in the sidebars of the components. I have implemented the icons in the note and Match's contact information on the external-main.html page.

--- a/family2family/src/main/resources/static/css/f2f-main.css
+++ b/family2family/src/main/resources/static/css/f2f-main.css
@@ -101,6 +101,7 @@ body{
     border: 1px solid black;
     border-left: 3em solid black !important;
     height: 100%;
+    background-color: black;
     margin:5px;
 }
 
@@ -120,4 +121,9 @@ body{
     height: 105px;
     resize: none;
     margin-left: 5px;
+}
+
+.componentIcon{
+    position: absolute;
+    left: 23px;
 }
