--- a/family2family/src/main/resources/templates/admin.html
+++ b/family2family/src/main/resources/templates/admin.html
@@ -34,6 +34,7 @@
 <script type="text/babel" src="../static/js/header.jsx" th:src="@{/js/header.jsx}"></script>
 <script type="text/babel" src="../static/js/nav-bar.jsx" th:src="@{/js/nav-bar.jsx}"></script>
 <script type="text/babel" src="../static/js/admin.jsx" th:src="@{/js/admin.jsx}"></script>
+<script>console.log("this is admin");</script>
 
 </body>
 
