--- a/family2family/src/main/resources/templates/external-main.html
+++ b/family2family/src/main/resources/templates/external-main.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet"
           href="../static/css/f2f-main.css"
           th:href="@{/css/f2f-main.css}"/>
+    <link rel="stylesheet"
+          href="../static/css/font-awesome/css/font-awesome.min.css"
+          th:href="@{/css/font-awesome/css/font-awesome.min.css}" />
+
 </head>
 
 <body>
