--- a/family2family/src/main/resources/templates/internal-main.html
+++ b/family2family/src/main/resources/templates/internal-main.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" th:href="@{webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" href="../static/css/f2f-main.css" th:href="@{/css/f2f-main.css}"/>
     <link rel="stylesheet" href="../static/css/f2f-internal-main.css" th:href="@{/css/f2f-internal-main.css}"/>
+    <link rel="stylesheet" href="../static/css/font-awesome/css/font-awesome.min.css" th:href="@{/css/font-awesome/css/font-awesome.min.css}" />
 </head>
 
 <body>
