--- a/family2family/src/main/resources/templates/test.html
+++ b/family2family/src/main/resources/templates/test.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>F2F</title>
+    <title>Test React Router</title>
 </head>
 
 <body>
 
-<div id="app">
+<div id="root">
 </div>
 
 <script type="text/javascript" src="../static/build/bundle.js" th:src="@{/build/bundle.js}"></script>
